src/test/ui/imports/unused-macro-use.stderr
error: unused `#[macro_use]` import
  --> $DIR/unused-macro-use.rs:3:1
   |
LL | #[macro_use]
   | ^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unused-macro-use.rs:1:9
   |
LL | #![deny(unused)]
   |         ^^^^^^
   = note: #[deny(unused_imports)] implied by #[deny(unused)]

error: unused `#[macro_use]` import
  --> $DIR/unused-macro-use.rs:7:5
   |
LL |     panic
   |     ^^^^^

error: aborting due to 2 previous errors

